# btc-light-client-contract

./: .catalog-info.yaml  .gitignore  Cargo.toml  Makefile  README.md  build.sh  flow.sh  rust-toolchain
.github/workflows/: docker-build.yml  rust.yml  security-analysis.yml  update-contract.yaml  update-contract.yml  update-relayer.yml  version-bump.yml
btc-types/: .catalog-info.yaml  Cargo.toml  rust-toolchain
btc-types/src/: aux.rs  btc_header.rs  contract_args.rs  hash.rs  header.rs  lib.rs  network.rs  tx.rs  u256.rs  utils.rs  zcash_header.rs
contract/: .catalog-info.yaml  .gitattributes  CLAUDE.md  Cargo.toml  README.md
contract/src/: bitcoin.rs  dogecoin.rs  lib.rs  litecoin.rs  utils.rs  zcash.rs
contract/tests/: test_basics.rs  test_dogecoin.rs  test_zcash.rs
contract/tests/data/: blocks_headers_685440-687456_mainnet.json  zcash_initial_blocks.json
integration-tests/: Cargo.toml  rust-toolchain
integration-tests/config/: bitcoin-template.toml  dogecoin-template.toml  litecoin-template.toml  zcash-template.toml
integration-tests/data/: bitcoin-init.json  dogecoin-init.json  litecoin-init.json  zcash-init.json
integration-tests/src/: tests.rs  utils.rs
merkle-tools/: .catalog-info.yaml  Cargo.toml
merkle-tools/src/: lib.rs
relayer/: .catalog-info.yaml  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose-btc.yaml  compose-ltc.yaml  compose-zec.yaml  compose.yaml  config.toml.example
relayer/configs/: btc_mainnet.toml  btc_testnet.toml  zcash.conf
relayer/examples/: .env.zcash-mainnet  .env.zcash-testnet
relayer/scripts/: compute_root.py  run_verification_flow.sh
relayer/src/: adaptive_batch.rs  bitcoin_client.rs  config.rs  config.rs:15:9n  lib.rs  main.rs  merkle_tools.rs  near_client.rs
relayer/tests/: integration_tests.rs
res/: btc_clinet.wasm  btc_light_client_contract.wasm  btc_light_client_dogecoin.wasm  btc_light_client_dogecoin_testnet.wasm  btc_light_client_litecoin.wasm  btc_light_client_litecoin_testnet.wasm  btc_light_client_mainnet.wasm  btc_light_client_testnet.wasm  dogecoin_client.wasm  litecoin_client.wasm  zcash_client.wasm
src/: lib.rs  merkle_tools.rs
tests/: test_basics.rs
