[package]
name = "btc-types"
description = "Bitcoin light client Types"
version = "0.1.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
#repository = "https://github.com/xxx/xxx"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh = {version = "1.*", features = ["derive"]}
serde = { version = "1.*", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sha2 = "0.*"
[target.'cfg(target_arch = "wasm32")'.dependencies]
near-sdk = "5.1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
