[package]
name = "btc-types"
description = "Bitcoin light client Types"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh = { version = "1.*", features = ["derive"] }
serde = { version = "1.*", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
scrypt = { version = "0.11.0", default-features = false, optional = true }
bitcoin = "0.32.5"
near-sdk = "5.14.0"
schemars = "0.8.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sha2 = "0.*"
[target.'cfg(target_arch = "wasm32")'.dependencies]
near-sdk = "5.1.0"

[dev-dependencies]
serde_json = "1.0.133"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[features]
default = []
scrypt_hash = ["scrypt"]
zcash_header = []
