[package]
name = "btc-light-client-contract"
description = "Bitcoin Light Client Contract"
version = "0.2.0"
edition = "2021"
# TODO: Fill out the repository field to help NEAR ecosystem tools to discover your project.
# NEP-0330 is automatically implemented for all contracts built with https://github.com/near/cargo-near.
# Link to the repository will be available via `contract_source_metadata` view-function.
#repository = "https://github.com/xxx/xxx"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
near-sdk = { version = "5.3.0", features = ["legacy"] }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.4.0" }
borsh = "1.5.0"
serde_json = "1"
merkle-tools = { path = "../merkle-tools" }
serde = { version = "1.0.200", features = ["derive"] }
btc-types = { path = "../btc-types" }
equihash = { version = "0.2.2", optional = true }

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[profile.bitcoin-testnet]
inherits = "release"

[profile.litecoin]
inherits = "release"

[profile.litecoin-testnet]
inherits = "release"

[features]
default = ["zcash"]
bitcoin = []
litecoin = ["btc-types/scrypt_hash"]
zcash = ["btc-types/zcash_header", "equihash"]
