[package]
name = "btc-light-client-integration-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "btc_light_client_integration_tests"
path = "src/tests.rs"

[dependencies]
btc-relayer = { path = "../relayer" }
btc-types = { path = "../btc-types" }
near-workspaces = { version = "0.20.1", features = ["unstable"] }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
serial_test = "0.5"
lazy_static = "1.4"
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
anyhow = "1.0.98"
toml = "0.8.12"

[dev-dependencies]
tokio-test = "0.4" 
