[package]
name = "merkle-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-types = { path = "../btc-types" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sha2 = "0.10.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
near-sdk = "5.14.0"

[dev-dependencies]
hex = "0.4.3"
