[package]
name = "btc-relayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "btc_relayer_lib"
path = "src/lib.rs"

[[bin]]
name = "btc-relayer"
path = "src/main.rs"

[dependencies]
bitcoin = "0.32.0"
bitcoincore-rpc = "0.19.0"
borsh = "1.5.0"
btc-types = { path = "../btc-types" }
near-jsonrpc-client = "0.9.0"
near-jsonrpc-primitives = "0.21.2"
near-primitives = "0.21.2"
near-crypto = "0.21.2"
reqwest = "0.11.27"
tokio = "1.37.0"
thiserror = "1.0.31"
env_logger = "0.11.3"
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"
log = "0.4.21"
rs_merkle = "1.4.2"
merkle-lite = "0.1.0"
rand_core = "0.6.4"
sha3 = "0.10.8"
sha2 = "0.10"
merkle-tools = { path = "../merkle-tools" }
hex = "0.4"
minreq = { version = "2.12.0", features = ["https"] }

[dev-dependencies]
lazy_static = "1.4"
serial_test = "0.5"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["integration_tests"]

[features]
integration_tests = []
zcash = ["btc-types/zcash_header"]
